docker/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: meet
spec:
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: webserver:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: meet
spec:
  selector:
    app: webserver
  ports:
    - name: http
      port: 5000
      targetPort: http
