docker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: meet #todo: https
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: webserver
                port:
                  name: http
            pathType: Prefix
            path: "/"
